// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments error 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  color: #696969;
  font-family: "GillSansMTStd-Medium";
  font-size: 13px;
  padding-bottom: -10px;
  padding-left: 7px;
  padding-top: 30px;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Comments are subject to our community guidelines, which can be viewed
     
    <a
      href="//www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
    >
      here
    </a>
    .
  </p>
  <div />
</div>
`;

exports[`disabled comments 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
}

.c2 {
  color: #696969;
  font-family: "GillSansMTStd-Medium";
  font-size: 13px;
  padding-bottom: 5px;
  padding-top: 5px;
  text-align: center;
}

.c1 {
  color: #333333;
  font-family: "TimesModern-Bold";
  font-size: 27px;
  padding-bottom: 5px;
  padding-top: 30px;
  text-align: center;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Comments for this article have been turned off
  </p>
  <p
    className="c2"
  >
    Comments are subject to our community guidelines, which can be viewed
     
    <a
      href="//www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
    >
      here
    </a>
    .
  </p>
</div>
`;

exports[`enabled comments 1`] = `
.c0 {
  margin-left: auto;
  margin-right: auto;
}

.c1 {
  color: #696969;
  font-family: "GillSansMTStd-Medium";
  font-size: 13px;
  padding-bottom: -10px;
  padding-left: 7px;
  padding-top: 30px;
}

@media (min-width:768px) {
  .c0 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c0 {
    width: 56.2%;
  }
}

<div
  className="c0"
>
  <p
    className="c1"
  >
    Comments are subject to our community guidelines, which can be viewed
     
    <a
      href="//www.thetimes.co.uk/article/f4024fbe-d989-11e6-9063-500e6740fc32"
    >
      here
    </a>
    .
  </p>
  <div />
</div>
`;
